--- a/inc/com/centreon/clib/version.hh.in
+++ b/inc/com/centreon/clib/version.hh.in
@@ -34,10 +34,10 @@ CC_BEGIN()
 namespace              clib {
   namespace            version {
     // Compile-time values.
-    unsigned int const major(@CLIB_MAJOR@);
-    unsigned int const minor(@CLIB_MINOR@);
-    unsigned int const patch(@CLIB_PATCH@);
-    char const*        string("@CLIB_VERSION@");
+    unsigned int const major = @CLIB_MAJOR@;
+    unsigned int const minor = @CLIB_MINOR@;
+    unsigned int const patch = @CLIB_PATCH@;
+    char const*        string = "@CLIB_VERSION@";
 
     // Run-time values.
     unsigned int       get_major() throw ();
