--- a/centreon-connector/icmp/inc/com/centreon/connector/icmp/version.hh.in
+++ b/centreon-connector/icmp/inc/com/centreon/connector/icmp/version.hh.in
@@ -1,5 +1,5 @@
 /*
-** Copyright 2011 Merethis
+** Copyright 2011-2012 Merethis
 **
 ** This file is part of Centreon Connector ICMP.
 **
@@ -27,8 +27,8 @@
 # define CENTREON_CONNECTOR_ICMP_VERSION_PATCH  @CONNECTOR_ICMP_PATCH@
 # define CENTREON_CONNECTOR_ICMP_VERSION_STRING "@CONNECTOR_ICMP_VERSION@"
 
-# define CENTREON_ENGINE_VERSION_MAJOR  @ENGINE_MAJOR@
-# define CENTREON_ENGINE_VERSION_MINOR  @ENGINE_MINOR@
+# define CENTREON_ENGINE_VERSION_MAJOR  @CONNECTOR_ICMP_MAJOR@
+# define CENTREON_ENGINE_VERSION_MINOR  @CONNECTOR_ICMP_MINOR@
 
 # include "com/centreon/connector/icmp/namespace.hh"
 
@@ -40,8 +40,8 @@ namespace            version {
   unsigned int const minor(@CONNECTOR_ICMP_MINOR@);
   unsigned int const patch(@CONNECTOR_ICMP_PATCH@);
 
-  unsigned int const engine_major(@ENGINE_MAJOR@);
-  unsigned int const engine_minor(@ENGINE_MINOR@);
+  unsigned int const engine_major = @CONNECTOR_ICMP_MAJOR@;
+  unsigned int const engine_minor = @CONNECTOR_ICMP_MINOR@;
 
   // Run-time values.
   unsigned int       get_major() throw ();
