Attempt to fix version string which causes multiple defined symbols on Win32.

--- a/centreon-clib/inc/com/centreon/clib/version.hh.in
+++ b/centreon-clib/inc/com/centreon/clib/version.hh.in
@@ -37,7 +37,7 @@ namespace              clib {
     unsigned int const major = @CLIB_MAJOR@;
     unsigned int const minor = @CLIB_MINOR@;
     unsigned int const patch = @CLIB_PATCH@;
-    char const*        string = "@CLIB_VERSION@";
+    char const* const  string = "@CLIB_VERSION@";
 
     // Run-time values.
     unsigned int       get_major() throw ();
