--- a/perl/test/connector/paths.hh.in
+++ b/perl/test/connector/paths.hh.in
@@ -18,9 +18,10 @@
 ** <http://www.gnu.org/licenses/>.
 */
 
-#ifndef TEST_CONNECTOR_BINARY_HH
-#  define TEST_CONNECTOR_BINARY_HH
+#ifndef TEST_CONNECTOR_PATHS_HH
+#  define TEST_CONNECTOR_PATHS_HH
 
+#  define CONNECTOR_TEST_DIR "@CONNECTOR_TEST_DIR@"
 #  define CONNECTOR_PERL_BINARY "@CONNECTOR_PERL_BINARY@"
 
-#endif // !TEST_CONNECTOR_BINARY_HH
+#endif // !TEST_CONNECTOR_PATHS_HH
